--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header class="navbar navbar-expand-lg sticky-top p-4">
+    <header class="navbar navbar-expand-lg sticky-top p-4" id="cabecalho">
         <div class="container">
-            <h1 class="navbar-brand m-0">MuiFome</h1>
+            <h1 class="navbar-brand m-0 section-title">MuiFome</h1>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -22,7 +22,7 @@
         <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
             <ul class="nav nav-pills d-block d-md-flex">
                 <li class="nav-item fw-bold">
-                    <a href="#" class="nav-link active">
+                    <a href="#sobre-o-restaurante" class="nav-link">
                         <i class="bi bi-house-door me-1"></i>
                         Sobre o restaurante
                     </a>
@@ -48,6 +48,58 @@
             </ul>
         </nav>
     </header>
+    <div data-bs-spy="scroll" data-bs-target="cabecalho">
+        <section id="sobre-o-restaurante">
+            <div class="carousel slide" data-bs-ride="carousel" id="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="3000">
+                        <img src="images/slides/slide1.png" alt="foto do espaó interno do restaurante">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="images/slides/slide2.png" alt="Duas taças de vinho">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="images/slides/slide3.png" alt="Uma mesa com comida">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                    <span class="carousel-control-next"></span>
+                </button>
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carousel" class="active" data-bs-slide-to="0"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
+                </div>
+            </div>
+            <div class="pt-5 pb-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <img src="images/restaurante.jpg" class="d-block w-100 rounded" alt="foto">
+                        </div>
+                        <div class="col-md-7">
+                            <h2 class="section-title">Sobre o <span>restaurante</span></h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ab quo nulla quis magni quaerat? Minus hic dignissimos consectetur sapiente corporis temporibus culpa. Soluta, qui! Quod quasi odit eaque tempora.
+                            </p>
+                            <h3 class="section-title">Sobre o <span>espaço</span></h3>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, laudantium neque facere necessitatibus consequatur minima voluptas exercitationem voluptates nostrum quibusdam dicta rem quidem aliquid quam officiis nemo cumque placeat minus.
+                            </p>
+                            <ul>
+                                <li>item 1</li>
+                                <li>item 2</li>
+                                <li>item 3</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
