--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="nav-item fw-bold">
-                    <a href="#" class="nav-link">
+                    <a href="#eventos" class="nav-link">
                         <i class="bi bi-calendar-check me-1"></i>
                         Eventos
                     </a>
@@ -81,11 +81,11 @@
                             <img src="images/restaurante.jpg" class="d-block w-100 rounded" alt="foto">
                         </div>
                         <div class="col-md-7">
-                            <h2 class="section-title">Sobre o <span>restaurante</span></h2>
+                            <h2 class="section-title">Sobre o <span class="text-colored">restaurante</span></h2>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ab quo nulla quis magni quaerat? Minus hic dignissimos consectetur sapiente corporis temporibus culpa. Soluta, qui! Quod quasi odit eaque tempora.
                             </p>
-                            <h3 class="section-title">Sobre o <span>espaço</span></h3>
+                            <h3 class="section-title">Sobre o <span class="text-colored">espaço</span></h3>
                             <p>
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, laudantium neque facere necessitatibus consequatur minima voluptas exercitationem voluptates nostrum quibusdam dicta rem quidem aliquid quam officiis nemo cumque placeat minus.
                             </p>
@@ -95,6 +95,45 @@
                                 <li>item 3</li>
                             </ul>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="eventos" class="pt-5 pb-5">
+            <div class="container">
+                <div class="row">
+                    <h2 class="section-title text-center">Para todas <span class="text-colored">as ocasiões</span></h2>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-md-4">
+                        <img src="images/eventos/aniversario.jpg" alt="happy" class="d-block w-100 rounded mb-2">
+                        <h3 class="section-title text-colored fs-4">
+                            <i class="bi bi-calendar-heart-fill"></i>
+                            Aniversarios
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste corporis sint porro obcaecati commodi at! Mollitia delectus optio officiis doloribus, eum quidem dolorum eos quod repellat vel! Distinctio, repellendus magni.
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="images/eventos/casamento.jpg" alt="happy" class="d-block w-100 rounded mb-2">
+                        <h3 class="section-title text-colored fs-4">
+                            <i class="bi bi-arrow-through-heart-fill"></i>
+                            Casamentos
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste corporis sint porro obcaecati commodi at! Mollitia delectus optio officiis doloribus, eum quidem dolorum eos quod repellat vel! Distinctio, repellendus magni.
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="images/eventos/confraternizacoes.jpg" alt="happy" class="d-block w-100 rounded mb-2">
+                        <h3 class="section-title text-colored fs-4">
+                            <i class="bi bi-people-fill"></i>
+                            Confras
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste corporis sint porro obcaecati commodi at! Mollitia delectus optio officiis doloribus, eum quidem dolorum eos quod repellat vel! Distinctio, repellendus magni.
+                        </p>
                     </div>
                 </div>
             </div>
