--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li class="nav-item fw-bold">
-                    <a href="#" class="nav-link">
+                    <a href="#cardapio" class="nav-link">
                         <i class="bi bi-card-text me-1"></i>
                         Nosso cardápio
                     </a>
@@ -136,6 +136,192 @@
                         </p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section id="cardapio" class="pt-5 pb-5">
+            <div class="container">
+                <div class="row">
+                    <h2 class="section-title text-center mb-5">Nosso <span class="text-colored">cardapio</span></h2>
+                </div>
+            </div>
+            <div class="row">
+                <aside class="col-md-2">
+                    <nav class="nav nav-pills flex-column nav-cardapio">
+                        <button type="button" data-bs-toggle="tab" data-bs-target="#bebidas-sem-alcol"  class="fw-bold text-start nav-link text-colored active">Bebidas sem alcol</button>
+                        <button type="button" data-bs-toggle="tab" data-bs-target="#bebidas-alcolicas"  class="fw-bold text-start nav-link text-colored">Bebidas alcolicas</button>
+                        <button type="button" data-bs-toggle="tab" data-bs-target="#entradas"  class="fw-bold text-start nav-link text-colored">Entradas</button>
+                        <button type="button" data-bs-toggle="tab" data-bs-target="#pratos-principais"  class="fw-bold text-start nav-link text-colored">Pratos principais</button>
+                        <button type="button" data-bs-toggle="tab" data-bs-target="#sobremesas"  class="fw-bold text-start nav-link text-colored">Sobremesas</button>
+                    </nav>
+                </aside>
+                <div class="col-md-10">
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="bebidas-sem-alcol">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <img class="d-block w-100" src="images/cardapio/bebidas/coca-cola.jpg" alt="coca-cola">
+                                    <h5 class="text-colored fw-bold mt-2">Coca-cola</h5>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                    </p>
+                                </div>
+                                <div class="col-md-3">
+                                    <img class="d-block w-100" src="images/cardapio/bebidas/suco.jpg" alt="suco">
+                                    <h5 class="text-colored fw-bold mt-2">Suco de laranja</h5>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                    </p>
+                                </div>
+                                <div class="col-md-3">
+                                    <img class="d-block w-100" src="images/cardapio/bebidas/suco.jpg" alt="suco">
+                                    <h5 class="text-colored fw-bold mt-2">Suco de laranja</h5>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                    </p>
+                                </div>
+                                <div class="col-md-3">
+                                    <img class="d-block w-100" src="images/cardapio/bebidas/suco.jpg" alt="suco">
+                                    <h5 class="text-colored fw-bold mt-2">Suco de laranja</h5>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                    </p>
+                                </div>
+                                <div class="col-md-3">
+                                    <img class="d-block w-100" src="images/cardapio/bebidas/suco.jpg" alt="suco">
+                                    <h5 class="text-colored fw-bold mt-2">Suco de laranja</h5>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                    </p>
+                                </div>
+                                <div class="col-md-3">
+                                    <img class="d-block w-100" src="images/cardapio/bebidas/suco.jpg" alt="suco">
+                                    <h5 class="text-colored fw-bold mt-2">Suco de laranja</h5>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                            <div class="tab-pane" id="bebidas-alcolicas"> 
+                                <div class="row">
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/bebidas/cerveja.jpg" alt="Cervejaa">
+                                            <h5 class="text-colored fw-bold mt-2">Cerveja</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/bebidas/vinho.jpg" alt="vinho">
+                                            <h5 class="text-colored fw-bold mt-2">Vinho</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tab-pane" id="entradas"> 
+                                <div class="row">
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/entradas/entrada.jpg" alt="nome da entrada">
+                                            <h5 class="text-colored fw-bold mt-2">Nome da entrada</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/entradas/entrada.jpg" alt="nome da entrada">
+                                            <h5 class="text-colored fw-bold mt-2">Nome da entrada</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/entradas/entrada.jpg" alt="nome da entrada">
+                                            <h5 class="text-colored fw-bold mt-2">Nome da entrada</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/entradas/entrada.jpg" alt="nome da entrada">
+                                            <h5 class="text-colored fw-bold mt-2">Nome da entrada</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tab-pane" id="pratos-principais"> 
+                                <div class="row">
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/pratos/pizza.jpg" alt="pizza">
+                                            <h5 class="text-colored fw-bold mt-2">pizza</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/pratos/salmao.jpg" alt="salmao">
+                                            <h5 class="text-colored fw-bold mt-2">salmao</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/pratos/salmao.jpg" alt="salmao">
+                                            <h5 class="text-colored fw-bold mt-2">salmao</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/pratos/salmao.jpg" alt="salmao">
+                                            <h5 class="text-colored fw-bold mt-2">salmao</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/pratos/salmao.jpg" alt="salmao">
+                                            <h5 class="text-colored fw-bold mt-2">salmao</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/pratos/salmao.jpg" alt="salmao">
+                                            <h5 class="text-colored fw-bold mt-2">salmao</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tab-pane" id="sobremesas"> 
+                                <div class="row">
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/sobremesas/bolo.jpg" alt="Bolo de chocolate">
+                                            <h5 class="text-colored fw-bold mt-2">Bolo de chocolate</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <img class="d-block w-100" src="images/cardapio/sobremesas/cupcake.jpg" alt="cupcake">
+                                            <h5 class="text-colored fw-bold mt-2">cupcake</h5>
+                                            <p>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                            </p>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </section>
     </div>
