--- a/index.html
+++ b/index.html
@@ -321,7 +321,46 @@
                         </div>
                     </div>
                 </div>
-                
+            </div>
+        </section>
+        <section id="fale-conosco" class="pt-5 pb-5">
+            <div class="container">
+                <div class="row">
+                    <h2 class="section-title text-center">Fale <span class="text-colored">conosco</span></h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-7">
+                        <form action="">
+                            <div>
+                                <label for="nome" class="form-label">Seu nome</label>
+                                <input type="text" id="nome" class="form-control" required>
+                            </div>
+                            <div>
+                                <label for="email" class="form-label">Seu e-mail</label>
+                                <input type="email" id="email" class="form-control" required>
+                            </div>
+                            <div>
+                                <label for="telefone" class="form-label">Seu Telefone (opcional)</label>
+                                <input type="tel" id="telefone" class="form-control">
+                            </div>
+                            <div>
+                                <label for="mensagem" class="form-label">Seu nome</label>
+                                <textarea class="form-control" id="mensagem" required></textarea>
+                            </div>
+                            <button type="submit" class="btn">Enviar</button>
+                        </form>
+                    </div>
+                    <div class="col-md-5">
+                    <div class="row">
+                        <h3 class="section-title fs-4 text-colored">Redes sociais</h3>
+                    </div>
+                    <div class="row">
+                        <h3 class="section-title fs-4 text-colored">Endereço</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur 
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
